profumo_reps/HCP_Profumo_cifti_bigdata_1200subs_50modes_smooth_5mm_4runs.ppp/NetMats/logs/archives/persdiag_NM190062.err

CommandNotFoundError: Your shell has not been properly configured to use 'conda activate'.
To initialize your shell, run

    $ conda init <SHELL_NAME>

Currently supported shells are:
  - bash
  - fish
  - tcsh
  - xonsh
  - zsh
  - powershell

See 'conda init --help' for more information and options.

IMPORTANT: You may need to close and restart your shell after running 'conda init'.


  File "/scratch/tyoeasley/brain_representations/comp_Psim_mtx.py", line 7
    def comp_Psim_mtx(fname_in,fname_out)
                                         ^
SyntaxError: invalid syntax
python: can't open file '/scratch/tyoeasley/brain_representations/Dist_Matrix_Filtration.py': [Errno 2] No such file or directory
cp: cannot stat '/scratch/tyoeasley/brain_representations/profumo_reps/HCP_Profumo_cifti_bigdata_1200subs_50modes_smooth_5mm_4runs.ppp/NetMats/subj_persdiag_NM_PROFUMO.npy': No such file or directory
